<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@color/backgroundWhite"
    android:padding="16dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5sp"
        android:elevation="8sp"
        android:src="@drawable/leaf"
        android:textAlignment="center"
        android:contentDescription="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:fontFamily="@font/open_sans_semibold"
        android:text="@string/coffee_disease_identification_and_alert_system"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30sp"
        android:elevation="4sp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/log_in"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="28sp" />
    <!--    Email-->

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:boxStrokeColor="@color/green"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginEmailView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/open_sans"
            android:hint="@string/email"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            tools:ignore="VisualLintTextFieldSize" />
    </com.google.android.material.textfield.TextInputLayout>

    <!--    Password-->
    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12sp"
        android:backgroundTint="@color/white"
        app:boxStrokeColor="@color/green"
        app:boxStrokeWidth="1dp"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/loginPasswordView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:fontFamily="@font/open_sans"
            android:hint="@string/password"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/green"
            tools:ignore="VisualLintTextFieldSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="367dp"
        android:layout_height="196dp"
        android:layout_marginTop="48sp"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progress_circular_login"
            android:layout_width="33dp"
            android:layout_height="34dp"
            android:layout_margin="4sp"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/appCompatLoginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/appCompatLoginButton"
            android:layout_width="213dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:backgroundTint="@color/black"
            android:elevation="4sp"
            android:fontFamily="@font/open_sans_semibold"
            android:padding="12sp"
            android:paddingStart="24sp"
            android:paddingTop="12sp"
            android:paddingEnd="24sp"
            android:paddingBottom="12sp"
            android:text="@string/log_in"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.296" />

        <TextView
            android:id="@+id/click_to_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/open_sans"
            android:padding="4sp"
            android:paddingStart="8sp"
            android:paddingEnd="8sp"
            android:text="Don't have an account?"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatLoginButton"
            app:layout_constraintVertical_bias="0.128" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>
